<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="email_label">Email:</string>
    <string name="go_button_label">GO</string>
    <string name="no_email_toast">please enter your email</string>
    <string name="molotov_count_title">Molotovs on hand:</string>
    <string name="number_of_garlic_cloves_label">Garlic Cloves</string>
    <string name="inventory_title">Inventory</string>
    <string name="local_powerups_button_label">View local powerups</string>
    <string name="status_card_label">Status</string>
    <string name="health_label">Health</string>
    <string name="healthy_status_label">Uninfected</string>
    <string name="bitten_status_label">Bitten</string>
    <string name="zombie_status_label">Zombie</string>
    <string name="inventory_card_title">Inventory</string>
    <string name="slain_zombies_label">Slain Zombies</string>
    <string name="inventory_button_title">Inventory</string>
    <string name="stats_button_title">Stats</string>
    <string name="map_button_title">Map</string>
    <string name="plus_sign">+</string>
    <string name="mute_notifications_label">Mute Notifications (not recommended)</string>
</resources>