<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.anthropicandroid.gzt.services.ApplicationPreferences.Preferences"/>

        <variable
            name="user_action_handlers"
            type="com.anthropicandroid.gzt.activity.UpperActionHandlers"/>

    </data>

    <FrameLayout
        android:id="@+id/inventory_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/inventory_linear_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/inventory_card_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_purpley_gray">

                <TextView
                    android:id="@+id/inventory_card_title_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/color_purpley_gray"
                    android:text="@string/inventory_card_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/inventory_card_title_field"
                    android:gravity="center"
                    android:text="fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text fun text "
                    android:textColor="@color/color_super_light_gray"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/inventory_list_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/molotovs_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/cards_margin_top"
                    android:elevation="@dimen/settings_cards_elevation"
                    card_view:cardBackgroundColor="@color/color_purpley_gray">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/number_of_molotovs_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/molotov_count_title"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/color_bright_green"/>

                        <TextView
                            android:id="@+id/built_molotovs_readout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/number_of_molotovs_label"
                            android:layout_alignParentEnd="true"
                            app:settings_warning_value="@{Preferences.NUMBER_OF_BUILT_MOLOTOVS}"/>

                        <TextView
                            android:id="@+id/molotov_readout_plus_sign"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/number_of_molotovs_label"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_toStartOf="@id/built_molotovs_readout"
                            android:text="@string/plus_sign"
                            android:textColor="@color/color_bright_green"/>


                        <TextView
                            android:id="@+id/purchased_molotovs_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/number_of_molotovs_label"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:layout_toStartOf="@id/molotov_readout_plus_sign"
                            android:background="@color/color_light_purpley_gray"
                            android:onClick="@{user_action_handlers::purchaseMolotovs}"
                            android:padding="5dp"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            app:purchased_settings_value="@{Preferences.NUMBER_OF_PURCHASED_MOLOTOVS}"/>

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/garlic_cloves_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/cards_margin_top"
                    android:elevation="@dimen/settings_cards_elevation"
                    card_view:cardBackgroundColor="@color/color_purpley_gray">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/number_of_garlic_cloves_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/number_of_garlic_cloves_label"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/color_bright_green"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/number_of_garlic_cloves_label"
                            android:layout_alignParentEnd="true"
                            android:textColor="@color/color_bright_green"
                            app:settings_value="@{Preferences.NUMBER_OF_GARLIC_CLOVES}"/>

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>